got rid of borders and fixed scrollbar problem

--- a/less/index.less
+++ b/less/index.less
@@ -105,12 +105,11 @@ html {
 header {
     width: 100%;
     display: flex;
-    border: 1px double black;
    
     @media( max-width: 768px ) {
         flex-wrap: wrap;
         justify-content: center;
-        background: lightblue;
+        background: rgb(44, 141, 173);
         height: 150px;
         align-content: space-around;
     }
@@ -132,7 +131,7 @@ header {
         font-size: @font-size-primary + .2rem;
         
         @media ( max-width: 768px ) {
-            font-size: 1rem;
+            font-size: 1.6rem;
         }
         
     } // header nav a   
@@ -163,7 +162,6 @@ header {
 .cta {
     margin-top: 72px;
     .flexbox-justify(flex-end);
-    border: 1px double black;
   
     @media( max-width: 768px ) {
         .flexbox-justify(center);  
@@ -211,7 +209,6 @@ header {
 .main-content {
     border-top: 2px solid black; 
     border-bottom: 2px solid black;
-    border: 1px double black;
     margin: 75px 0 35px 0;
     padding: 35px 0;
     font-size: 1.6rem;
@@ -248,7 +245,6 @@ header {
 
 .contact {
     font-size: 1.6rem;
-    border: 1px double black;
 
     @media ( max-width: 768px ) {
         .custom-font();
@@ -266,7 +262,6 @@ footer {
     font-size: 1.6rem;
     text-align: center;
     margin: 40px 0 20px;
-    border: 1px double black;
     @media ( max-width: 768px ) {
         .custom-font();
     }
